[tool.poetry]
name = "TechTalk stumbleserver"
version = "0.1.0"
description = "A stumbler for tech talks based on StumbleServer"
authors = [
  "inteoryx https://github.com/inteoryx",
  "EricEhmke https://github.com/EricEhmke",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
flake8 = "^4.0.1"
requests = "^2.27.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
